[gd_scene load_steps=6 format=3 uid="uid://b5kxdu13eqh04"]

[ext_resource type="Texture2D" uid="uid://2fnjx565k0er" path="res://assets/sprites/slime_green.png" id="1_hmjda"]
[ext_resource type="Script" path="res://EnemyAudioRange.gd" id="2_02cie"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r7hsk"]
radius = 15.0333

[sub_resource type="CircleShape2D" id="CircleShape2D_emtys"]
radius = 83.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tj138"]
radius = 160.028

[node name="Enemy" type="CharacterBody2D"]
position = Vector2(800, 263)

[node name="BodyColission" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_r7hsk")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.30469, 1.30469)
texture = ExtResource("1_hmjda")
region_enabled = true
region_rect = Rect2(48.6778, 55.2601, 22.3025, 16.7399)

[node name="AudioRange" type="Area2D" parent="."]
collision_layer = 2
script = ExtResource("2_02cie")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AudioRange"]
shape = SubResource("CircleShape2D_emtys")
debug_color = Color(0.310463, 0.586067, 0.617002, 0.42)

[node name="NoiseRange" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoiseRange"]
shape = SubResource("CircleShape2D_tj138")
debug_color = Color(0.831197, 0.352013, 0.461114, 0.42)

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="AudioRange" to="AudioRange" method="_on_area_entered"]
